Se agrego a turnos las fk de oficinas y oficinas per, y se trae esa data al mostrar un turno especifico desde el cliente, se agrego a swagger
